--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4092,7 +4092,7 @@ packages currently on CRAN).
 
 @noindent
 
-By default the Solaris Studio compilers do not conform to the C99
+By default the Solaris Studio compilers do not by default conform to the C99
 standard (appendix F 8.9) on the return values of functions such as
 @code{log}: use @option{-xlibmieee} to ensure this.  Also, errors have
 been reported on @cputype{amd64} if @option{-xc99} is omitted.
