--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1026,12 +1026,13 @@ You need @code{libpng}, @code{jpeg} and @code{libtiff} sources
 (available, e.g., from @uref{http://www.libpng.org/},
 @uref{http://www.ijg.org} and
 @uref{ftp://ftp.remotesensing.org/@/pub/@/libtiff/}).  You will need
-files @file{libpng-1.2.18.tar.gz}, @file{jpegsrc.v6b.tar.gz},
-@file{tiff-3.8.0.tar.gz} or later.
+files @file{libpng-1.2.18.tar.gz} (including @samp{1.4.x} but not
+@samp{1.5.x}), @file{jpegsrc.v6b.tar.gz}, @file{tiff-3.8.0.tar.gz} (but
+not @samp{4.0.0beta}) or later.
 
 Working in the directory @file{@var{R_HOME}/src/gnuwin32/bitmap},
 install the @code{libpng} and @code{jpeg} sources in sub-directories.
-The @code{jpeg} sub-directory for version 8a is named @file{jpeg-8b}; if
+The @code{jpeg} sub-directory for version 8b is named @file{jpeg-8b}; if
 you use a different version (e.g.@: @file{jpeg-6b}), copy file
 @file{src/gnuwin32/MkRules.dist} to @file{src/gnuwin32/MkRules.local}
 and edit the definition of @code{JPEGDIR}: the names of the
@@ -1040,9 +1041,9 @@ and edit the definition of @code{JPEGDIR}: the names of the
 Example:
 
 @example
-> tar -zxf libpng-1.4.1.tar.gz
-> mv libpng-1.4.1 libpng
-> tar -zxf jpegsrc.v8a.tar.gz
+> tar -zxf libpng-1.4.5.tar.gz
+> mv libpng-1.4.5 libpng
+> tar -zxf jpegsrc.v8c.tar.gz
 > tar -zxf tiff-3.9.4.tar.gz
 > mv tiff-3.9.4/libtiff .
 > rm -rf tiff-3.9.4
@@ -4027,15 +4028,14 @@ LIBS=-L/usr/X11/lib
 @cputype{x86}) using the (zero cost) Oracle Solaris Studio 12 compilers:
 there has been some success with
 @command{gcc}@tie{}4/@command{gfortran}, mainly on Sparc.  Sun packages
-for @R{} used to be available from @uref{http://www.sunfreeware.com/}
-for both architectures, but recently have often been several versions
-old.  (Recent Sun machines are AMD Opterons or Intel Xeons
-(@cputype{amd64}) rather than @cputype{x86}, but 32-bit @cputype{x86}
-executables are the default.)
+for @R{} are available from @uref{http://www.sunfreeware.com/} for both
+32-bit architectures, but recently have often been several versions old.
+(Recent Sun machines are AMD Opterons or Intel Xeons (@cputype{amd64})
+rather than @cputype{x86}, but 32-bit @cputype{x86} executables are the
+default.)
 
 There are also reports of success on OpenSolaris (also known as Solaris
-Express Community Edition, and sometimes as Solaris 11) on
-@cputype{x86}.
+Express Community Edition, and dropped in August 2010) on @cputype{x86}.
 
 The Solaris versions of several of the tools needed to build @R{}
 (e.g.@: @command{make}, @command{ar} and @command{ld}) are in
@@ -4143,7 +4143,8 @@ it is needed for linking) is @samp{Cstd} which dates from 1998: see
 @uref{http://developers.sun.com/@/solaris/@/articles/@/cmp_stlport_libCstd.html}.
 Note though that most external Solaris C++ libraries will have been
 built with @samp{Cstd} and so an @R{} package using such a package also
-needs to be.  Occasionally the library flag @option{-lCrun} is needed.
+needs to be.  Occasionally the flag @option{-library=stlport4,Crun} is
+needed.
 
 Several CRAN packages using C++ need the more liberal interpretation
 given by adding
