--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2689,11 +2689,12 @@ The bitmapped graphics devices @code{jpeg()}, @code{png()} and
 
 If you have them installed (including the appropriate headers and of
 suitable versions), @code{zlib}, @code{libbz2} and PCRE will be used if
-specified by @option{--with-system-zlib} (version 1.2.3 only: bugs have
-been found with 1.2.4 and 1.2.5), @option{--with-system-bzlib} or
-@option{--with-system-pcre}: otherwise versions in the @R{} sources will
-be compiled in.  As the latter suffice and are tested with @R{} you
-should not need to change this.
+specified by @option{--with-system-zlib} (version 1.2.3 or later, but
+beware that bugs have been found with 1.2.4 and 1.2.5, and these should
+not be used on 32-bit Linux systems with LFS),
+@option{--with-system-bzlib} or @option{--with-system-pcre}: otherwise
+versions in the @R{} sources will be compiled in.  As the latter suffice
+and are tested with @R{} you should not need to change this.
 
 @code{liblzma} from @code{xz-utils} version 4.999 or later (preferably
 5.0.0 or later) will be used if installed: the version in the @R{}
