--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2696,11 +2696,7 @@ beware that bugs have been found with 1.2.4 and 1.2.5, and these should
 not be used on 32-bit Linux systems with LFS),
 @option{--with-system-bzlib} or @option{--with-system-pcre}: otherwise
 versions in the @R{} sources will be compiled in.  As the latter suffice
-and are tested with @R{} you should not need to change this.  (One
-circumstance in which you might is if your system provides @code{zlib}
-1.2.5 and you want to use packages such as @pkg{XML} linked against the
-system @code{zlib}: that has been seen to cause crashes, at least when
-@R{} was not built as a shared library.)
+and are tested with @R{} you should not need to change this.
 
 @code{liblzma} from @code{xz-utils} version 4.999 or later (preferably
 5.0.0 or later) will be used if installed: the version in the @R{}
